--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
   <title>Uae</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
+<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+
 </head>
 <body>
   <app-root></app-root>
+
 </body>
+
 </html>
