change style and language

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-  <link href="assets/css/style-ltr.css"  type="text/css"  id="mycss"  rel="stylesheet" />
+  <link href="assets/css/style-rtl.css"  type="text/css"  id="mycss"  rel="stylesheet" />
 </head>
 <body>
 
