--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Uae</title>
   <base href="/">
+  <link rel="icon" type="image/x-icon" href="assets/images/spinner/spinner.gif" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
   <link id="swipermin" rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
